refactor! add "toList()" instead of "collectors.toList()"
Signed-off-by: Rafiere <rafapgbr@gmail.com>