@@ -5,9 +5,9 @@ import com.atarget.atargetbackend.timer.domain.TimeCounter;
 import com.atarget.atargetbackend.timer.repository.TimeCounterRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +22,6 @@ public class GetAllTimeCountersService {
 
 		return allTimersCount.stream()
 		                     .map(GetTimeCounterResponse::from)
-		                     .collect(Collectors.toList());
+		                     .toList();
 	}
 }
